[Misc] Define different MAVEN_OPTS values for java7 and java8